<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>consulo.hub</groupId>
	<artifactId>webservice-api-root</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>hub(Parent)</name>

	<properties>
		<consulo.version>3-SNAPSHOT</consulo.version>
		<spring.boot.version>3.2.5</spring.boot.version>
		<spring.version>6.2.4</spring.version>
		<vaadin.version>24.3.10</vaadin.version>
		<vaadin.flow.version>${vaadin.version}</vaadin.flow.version>
		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
	</properties>

	<repositories>
		<repository>
			<id>consulo</id>
			<url>https://maven.consulo.io/repository/snapshots/</url>
			<snapshots>
				<updatePolicy>interval:60</updatePolicy>
			</snapshots>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>33.1.0-jre</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-compress</artifactId>
				<version>1.26.1</version>
			</dependency>

			<dependency>
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>1.29</version>
			</dependency>

			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>2.10.1</version>
			</dependency>

			<dependency>
				<groupId>org.jdom</groupId>
				<artifactId>jdom-core</artifactId>
				<version>3.0-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>org.iq80.snappy</groupId>
				<artifactId>snappy</artifactId>
				<version>0.4</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>2.0.13</version>
			</dependency>

			<dependency>
				<groupId>jakarta.servlet</groupId>
				<artifactId>jakarta.servlet-api</artifactId>
				<version>6.0.0</version>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>2.15.4</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<pluginRepositories>
		<pluginRepository>
			<id>consulo-plugin</id>
			<url>https://maven.consulo.io/repository/snapshots/</url>
			<snapshots>
				<updatePolicy>interval:60</updatePolicy>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>procoeton-ui-core</module>
		<module>hub-shared</module>
		<module>hub-backend</module>
		<module>hub-frontend</module>
		<module>hub-plugin-analyzer-rt</module>
		<module>hub-plugin-analyzer-container-rt</module>
	</modules>
</project>
